@@ -116,6 +116,7 @@
 
     <variable name="Label_Widget">
         <value condition="!String.IsEmpty(ListItem.TvShowTitle) + !String.IsEqual(ListItem.Title,ListItem.TvShowTitle)">$INFO[ListItem.Property(AirDate),, - ]$INFO[ListItem.TvShowTitle,, - ]$INFO[ListItem.Season,,x]$INFO[ListItem.Episode,,. ]$INFO[ListItem.Title]</value>
+        <value condition="!String.IsEmpty(ListItem.ChannelName)">$INFO[ListItem.ChannelName]$INFO[ListItem.Title, - ,]</value>
         <value>$INFO[ListItem.Label]</value>
     </variable>
 
