@@ -515,6 +515,15 @@
                 <shortcut widget="RandomArtists" label="$LOCALIZE[31295]" icon="DefaultMusicArtists.png" widgetTarget="music">special://skin/extras/playlists/RandomArtists.xsp</shortcut>
                 <shortcut widget="MusicNodes" label="$LOCALIZE[31300]" icon="special://skin/extras/icons/title.png" widgetTarget="music">library://music/</shortcut>
             </node>
+            <node label="$LOCALIZE[31343]">
+                <shortcut widget="LastPlayedChannels" label="$LOCALIZE[31381]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://channels/tv/*?view=lastplayed</shortcut>
+                <shortcut widget="AllChannels" label="$LOCALIZE[19287]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://channels/tv/*</shortcut>
+                <shortcut widget="ActiveRecordings" label="$LOCALIZE[31382]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://recordings/tv/active?view=flat</shortcut>
+                <shortcut widget="GroupedActiveRecordings" label="$LOCALIZE[31383]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://recordings/tv/active?view=grouped</shortcut>
+                <shortcut widget="DeletedRecordings" label="$LOCALIZE[19184]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://recordings/tv/deleted?view=flat</shortcut>
+                <shortcut widget="GroupedDeletedRecordings" label="$LOCALIZE[31384]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://recordings/tv/deleted?view=grouped</shortcut>
+                <shortcut widget="Timers" label="$LOCALIZE[19040]" icon="DefaultAddonPVRClient.png" widgetTarget="pvr">pvr://timers/tv/timers</shortcut>
+            </node>
             <node label="$LOCALIZE[14224]">
                 <content>widgets</content>
                 <shortcut widget="VideoSources" label="$LOCALIZE[31159]" icon="DefaultVideo.png" widgetTarget="video">sources://video/</shortcut>
