@@ -1,5 +1,7 @@
 [B]0.9.18[/B]
 Plot overlay delay option
+Add PVR default widget options
+Add PVR landscape text to check for channelname
 
 [B]0.9.17[/B]
 Change user rating to star icon
